--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@mantine/next": "^6.0.13",
     "@mantine/prism": "^6.0.13",
     "@tabler/icons-react": "^2.21.0",
-    "@types/node": "20.2.5",
+    "@types/node": "^20.3.3",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "axios": "^1.4.0",
