--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/hooks": "^6.0.13",
     "@mantine/next": "^6.0.13",
     "@mantine/prism": "^6.0.13",
+    "@rainbow-me/rainbowkit": "^1.0.7",
     "@tabler/icons-react": "^2.21.0",
     "@types/node": "^20.3.3",
     "@types/react": "18.2.8",
@@ -26,6 +27,8 @@
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "viem": "^1.4.2",
+    "wagmi": "^1.3.9"
   }
 }
