--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^20.3.3",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "@wagmi/core": "^1.3.9",
     "axios": "^1.4.0",
     "ethers": "5.7.2",
     "next": "13.4.4",
